cart spacing fixed

--- a/solution-hw1/style.css
+++ b/solution-hw1/style.css
@@ -5,25 +5,25 @@ hr {
   }
 
 h2 {
-    font-size: 18px;
+    font-size: 24px;
     font-family: 'verdana';
     font-weight: lighter;
 }
 
 h3 {
-    font-size: 20px;
+    font-size: 30px;
     font-family: 'verdana';
     font-weight: lighter;
 }
 
 h4 {
-    font-size: 18px;
+    font-size: 24px;
     font-family: 'verdana';
     font-weight: lighter;
 }
 
 h5 {
-    font-size: 10px;
+    font-size: 14px;
     font-family: 'verdana';
     font-weight: lighter;
 }
